[package]
name = "simulation-station"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
log = "0.4.29"
rand = "0.9.2"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = ["Window", "Document", "HtmlCanvasElement", "Element"] }

